add ability to publish to github package registry

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,14 @@ publishing {
     }
      repositories {
         mavenLocal()
+         maven {
+             name = "GitHubPackages"
+             url = uri("https://maven.pkg.github.com/elixir-europe/mars-repository-lib")
+             credentials {
+                 username = System.getenv("USERNAME")
+                 password = System.getenv("TOKEN")
+             }
+         }
     }
 }
 
