--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 
 publishing {
     publications {
-        mavenJava(MavenPublication) {
+        library(MavenPublication) {
             from components.java
         }
     }
