--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,8 @@ on:
   push:
     tags:
       - '**'
+    branches:
+      - 'main'
   workflow_dispatch:
 
 jobs:
@@ -22,6 +24,8 @@ jobs:
         uses: gradle/actions/setup-gradle@017a9effdb900e5b5b2fddfb590a105619dca3c3 # v4.4.2
 
       - name: Publish package
-        run: ./gradlew publish
+        run: |
+          chmod +x ./gradlew
+          ./gradlew publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
