set username and token

--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,8 @@ publishing {
              name = "GitHubPackages"
              url = uri("https://maven.pkg.github.com/elixir-europe/mars-repository-lib")
              credentials {
-                 username = System.getenv("USERNAME")
-                 password = System.getenv("TOKEN")
+                 username = System.getenv("GITHUB_ACTOR")
+                 password = System.getenv("GITHUB_TOKEN")
              }
          }
     }
